updated the whole site

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-portfolio-url.com/" />
+    <meta property="og:url" content="https://dainwi.vercel.app/" />
     <meta property="og:title" content="Dainwi Choudhary | Full Stack Developer" />
     <meta property="og:description" content="Full Stack Developer specializing in React, Next.js, and modern web technologies. View my portfolio of innovative solutions and web applications." />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://your-portfolio-url.com/" />
+    <meta property="twitter:url" content="https://dainwi.vercel.app/" />
     <meta property="twitter:title" content="Dainwi Choudhary | Full Stack Developer" />
     <meta property="twitter:description" content="Full Stack Developer specializing in React, Next.js, and modern web technologies. View my portfolio of innovative solutions and web applications." />
     <meta property="twitter:image" content="%PUBLIC_URL%/og-image.png" />
